<resources>
    <string name="app_name">MoMo Manager</string>
    <string name="about_msg">MoMo Manager\nApp version %s\nLib Version: %s\nSupports only mtn for now\nDeveloped by <b>MaziTek GH</b></string>
    <string name="starting">STARTING…</string>
    <string name="balance">Balance</string>
    <string name="total_received">Total Received</string>
    <string name="total_spent">Total Spent</string>
    <string name="message_title">MESSAGE TITLE</string>
    <string name="this_is_the_message_side">this is the message side</string>
    <string name="ok">OK</string>
    <string name="all_activities">All Transactions</string>
    <string name="received_activities">Received Transactions</string>
    <string name="sent_activities">Sent Transactions</string>
    <string name="credit_activities">Airtime Transactions</string>
    <string name="permission_msg">The app uses mobile money sms messages to compute its data\n\nOn the next screen you have to grant this app the permission to access sms</string>
    <string name="info">Click any of the button above to load it Version 1 is for MTN Mobile money only</string>
    <string name="transaction_id">transaction ID</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">The username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="app_logo">app Logo</string>
    <string name="amount_received">Amount Received</string>
    <string name="reference">Reference</string>
    <string name="amount_sent">Amount Sent</string>
    <string name="credit_bought">Credit Bought</string>
    <string name="amount">GHS %.2f</string>
    <string name="sender">%s: %s</string>
    <string name="rate_us">Rate Us</string>
    <string name="export">Export</string>
    <string name="about">About</string>
    <string name="mtn_momo">MTN MoMo</string>
    <string name="source_code">Source Code</string>

</resources>
