<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <!--todo 29 NOV 2020 move to drawer navigation  -->
    <item
        android:id="@+id/action_mtn"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="99"
        android:title="@string/mtn_momo" />


    <item
        android:id="@+id/action_visit_source_code"
        android:checked="true"
        android:icon="@android:drawable/star_on"
        android:orderInCategory="103"
        android:title="@string/source_code" />
    <item
        android:id="@+id/action_export"
        android:checked="true"
        android:orderInCategory="102"
        android:title="@string/export" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="104"

        android:title="@string/about"
        app:showAsAction="never" />

</menu>
